fix whitespace on session forms

--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -1,7 +1,7 @@
 .black-out {
-    position: relative;
+    position: absolute;
     width: 100%;
-    min-height: 85vh;
+    min-height: 90vh;
     background-color: black;
 }
 
